# anyglobal

./: Makefile  README.md  README.org  go.mod  main.go  pyproject.toml
cmd/: root.go
src/anyglobal/: __init__.py
