[project]
name = "anyglobal"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Taylor Monacelli", email = "taylormonacelli@gmail.com" }
]
dependencies = [
    "youtube-transcript-api>=0.6.2",
    "jinja2>=3.1.3",
]
readme = "README.org"
requires-python = ">= 3.8"

[project.scripts]
hello = "anyglobal:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/anyglobal"]
